<resources>
    <string name="app_name">ChatAppDemo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_have_an_account">Aleady have an Account?</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_account">Register Account</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="fill_your_details">Fill your details</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="sign_up_now">Sign Up now</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="welcome_back">Welcome Back!</string>

    <string name="empty_Name">Please enter Name</string>
    <string name="Name_space">Please enter valid Name</string>
    <string name="Name_valid">Name must be in Alphabet</string>

    <string name="empty_email">Email is required</string>
    <string name="email_valid">Email is Not Valid</string>

    <string name="empty_password">Password is required</string>
    <string name="password_not_valid">Password should contain: \n• at least 1 digit \n• at least 1 lower case letter \n• at least 1 upper case latter \n• at least 1 special character [@#$%^+=]
        \n• at least 8 characters</string>
    <string name="log_out">Log out</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_sent_message">This is Sent message</string>
</resources>