<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signupLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/register"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/register_account"
            style="@style/text_26sp_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/fill_detail"
            style="@style/text_16sp_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/fill_your_details"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fill_detail"
            app:layout_constraintVertical_bias="0.1">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNameOut"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_your_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNameSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="8dp"

                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailOutSignup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/enter_your_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"

                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassOutSignup"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_eye"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.1">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                style="@style/button_Style"
                android:elevation="50dp"
                android:text="@string/sign_up"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_signup"
            app:layout_constraintVertical_bias="0.30">

            <TextView
                android:id="@+id/txtDo_not"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/textHintColor"

                />

            <TextView
                android:id="@+id/txtLogin"
                style="@style/text_16sp_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/purple_700" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>